tests/semantic/valid/64_i2_infer_param.hulk
function double(x) => x + x;

print(double(1));
