tests/semantic/invalid/18_r4_call_before_any_function_decl.hulk
print(f(1));
function f(x) => x;
